@@ -47,7 +47,7 @@ ILU_relax                = 0.9    % add dropped entries to diagonal with relaxat
 Schwarz_mmsize           = 200    % max block size
 Schwarz_maxlvl           = 2      % level used to form blocks
 Schwarz_type             = 1      % 1 forward | 2 backward | 3 symmetric
-Schwarz_blksolver        = 0      % block solver: 31 SuperLU | 32 UMFPack | 33 MUMPS
+Schwarz_blksolver        = 32      % block solver: 31 SuperLU | 32 UMFPack | 33 MUMPS
 
 %----------------------------------------------%
 % parameters for multilevel iteration          %
@@ -75,7 +75,7 @@ AMG_smoother             = GS     % GS | JACOBI | SGS SOR | SSOR |
                                   % GSOR | SGSOR | POLY | L1DIAG | CG
 AMG_smooth_order         = CF     % NO: natural order | CF: CF order
 AMG_ILU_levels           = 0      % number of levels using ILU smoother
-AMG_Schwarz_levels       = 0	  % number of levels using Schwarz smoother
+AMG_Schwarz_levels       = 1	  % number of levels using Schwarz smoother
 AMG_relaxation	         = 1.0    % relaxation parameter for SOR smoother 
 AMG_polynomial_degree	 = 3      % degree of the polynomial smoother
 AMG_presmooth_iter       = 1      % number of presmoothing sweeps
